support/global/src/main/kotlin/com/example/mindshare/error/exception/MalformedJwtException.kt
package com.example.mindshare.error.exception

import com.example.mindshare.ErrorCode

class MalformedJwtException(
    val errorCode: ErrorCode,
    val data: Any? = null,
) : RuntimeException(errorCode.message)
